# mysitedjango

./: .gitignore  README.md
djangotutorial/: .gitignore   README.md  db.sqlite3  requirements.txt
djangotutorial/django-polls/: LICENSE  README.rst  pyproject.toml
djangotutorial/django-polls/django_polls/: apps.py  views.py
djangotutorial/django-polls/django_polls/migrations/: 0001_initial.py
djangotutorial/mysite/: settings.py  urls.py  wsgi.py
djangotutorial/polls/: admin.py  models.py  tests.py  urls.py  views.py
djangotutorial/polls/migrations/: 0002_category.py  0003_question_category.py
djangotutorial/polls/static/polls/: style.css
djangotutorial/polls/templates/polls/: category_questions.html  detail.html  index.html  search_results.html
