[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-polls"
version = "0.1"
description = "A Django app to conduct web-based polls."
readme = "README.rst"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [
    { name = "Your Name", email = "yourname@example.com" },
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "Django>=4.2",
]

[project.urls]
Homepage = "https://www.example.com/"

[tool.setuptools.packages.find]
include = ["django_polls*"]